--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@
         ];
 
         const certifications = [
+            { title: "Intro To Cybersecurity", image: "cyber.png", description: "Acquired knowledge related to security risk and how to handle these." },
             { title: "Excel By Microsoft", image: "microsoft.png", description: "Acquired skills in creating and managing data for companies." },
             { title: "Preparing Data for Machine Learning", image: "dataml.png", description: "Learned techniques for cleaning, transforming, and preparing data for machine learning models." },
             { title: "Python for Machine Learning", image: "data2.png", description: "Mastered Python programming for implementing machine learning algorithms and data analysis." },
